// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicProjectPage renders a spinner if no project is loaded 1`] = `
<DocumentFragment>
  <div
    class="MuiCircularProgress-root pageProgress MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    data-testid="loading_spinner"
    role="progressbar"
    style="width: 40px; height: 40px;"
  >
    <svg
      class="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx="44"
        cy="44"
        fill="none"
        r="20.2"
        stroke-width="3.6"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`PublicProjectPage renders correctly with no end date 1`] = `
<DocumentFragment>
  <div
    class="MuiContainer-root MuiContainer-maxWidthXl"
    data-testid="view_project_page_component"
  >
    <div
      class="MuiBox-root MuiBox-root-124"
    >
      <div
        class="MuiBox-root MuiBox-root-125"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1"
        >
          Test Project Name
        </h1>
        <div
          class="MuiBox-root MuiBox-root-126"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Project Status:
          </span>
          <div
            class="MuiBox-root MuiBox-root-127"
          >
            <div
              class="MuiChip-root makeStyles-chip-128 makeStyles-chipActive-129 MuiChip-sizeSmall"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall"
              >
                Active
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-134"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-8"
        >
          <div
            class="MuiBox-root MuiBox-root-135"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                class="MuiBox-root MuiBox-root-136"
              >
                <div
                  class="MuiBox-root MuiBox-root-137"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h2"
                  >
                    Project Objectives
                  </h2>
                </div>
                <p
                  class="MuiTypography-root MuiTypography-body1"
                >
                  Project objectives
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-138"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                class="MuiBox-root MuiBox-root-139"
              >
                <div
                  class="MuiBox-root MuiBox-root-141"
                >
                  <div
                    class="MuiToolbar-root MuiToolbar-regular"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-142"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h2"
                      >
                        Restoration Treatments
                      </h2>
                      <div
                        class="MuiBox-root MuiBox-root-143"
                      >
                        <button
                          aria-label="Filter Treatments"
                          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
                          data-testid="open-layer-menu"
                          id="open-layer-menu"
                          tabindex="0"
                          title="Filter Treaatments"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            Filter Treatments (0)
                            <span
                              class="MuiButton-endIcon MuiButton-iconSizeMedium"
                            >
                              <svg
                                role="presentation"
                                style="width: 1.5rem; height: 1.5rem;"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M7,10L12,15L17,10H7Z"
                                  style="fill: currentColor;"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-144"
              >
                <div
                  class="MuiBox-root MuiBox-root-146 makeStyles-mapContainer-145"
                  data-testid="map_container"
                >
                  <div
                    class="makeStyles-map-147 leaflet-container leaflet-grab leaflet-touch-drag"
                    id="project_location_form_map"
                    style="position: relative;"
                    tabindex="0"
                  >
                    <div
                      class="leaflet-pane leaflet-map-pane"
                      style="left: 0px; top: 0px;"
                    >
                      <div
                        class="leaflet-pane leaflet-tile-pane"
                      >
                        <div
                          class="leaflet-layer "
                          style="z-index: 1;"
                        >
                          <div
                            class="leaflet-tile-container leaflet-zoom-animated"
                            style="z-index: 18; left: 0px; top: 0px;"
                          >
                            <img
                              alt=""
                              class="leaflet-tile"
                              role="presentation"
                              src="https://maps.gov.bc.ca/arcgis/rest/services/province/roads_wm/MapServer/tile/5/10/4"
                              style="width: 256px; height: 256px; left: -159px; top: -31px;"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="leaflet-pane leaflet-shadow-pane"
                      />
                      <div
                        class="leaflet-pane leaflet-overlay-pane"
                      />
                      <div
                        class="leaflet-pane leaflet-marker-pane"
                      />
                      <div
                        class="leaflet-pane leaflet-tooltip-pane"
                      />
                      <div
                        class="leaflet-pane leaflet-popup-pane"
                      />
                    </div>
                    <div
                      class="leaflet-control-container"
                    >
                      <div
                        class="leaflet-top leaflet-left"
                      >
                        <div
                          class="leaflet-control-zoom leaflet-bar leaflet-control"
                        >
                          <a
                            aria-label="Zoom in"
                            class="leaflet-control-zoom-in"
                            href="#"
                            role="button"
                            title="Zoom in"
                          >
                            +
                          </a>
                          <a
                            aria-label="Zoom out"
                            class="leaflet-control-zoom-out"
                            href="#"
                            role="button"
                            title="Zoom out"
                          >
                            −
                          </a>
                        </div>
                      </div>
                      <div
                        class="leaflet-top leaflet-right"
                      />
                      <div
                        class="leaflet-bottom leaflet-left"
                      />
                      <div
                        class="leaflet-bottom leaflet-right"
                      >
                        <div
                          aria-haspopup="true"
                          class="leaflet-control-layers leaflet-control"
                        >
                          <a
                            class="leaflet-control-layers-toggle"
                            href="#"
                            title="Layers"
                          />
                          <section
                            class="leaflet-control-layers-list"
                          >
                            <div
                              class="leaflet-control-layers-base"
                            >
                              <label>
                                <div>
                                  <input
                                    checked="checked"
                                    class="leaflet-control-layers-selector"
                                    name="leaflet-base-layers_63"
                                    type="radio"
                                  />
                                  <span>
                                     BC Government
                                  </span>
                                </div>
                              </label>
                              <label>
                                <div>
                                  <input
                                    class="leaflet-control-layers-selector"
                                    name="leaflet-base-layers_63"
                                    type="radio"
                                  />
                                  <span>
                                     Esri Imagery
                                  </span>
                                </div>
                              </label>
                            </div>
                            <div
                              class="leaflet-control-layers-separator"
                              style="display: none;"
                            />
                            <div
                              class="leaflet-control-layers-overlays"
                            />
                          </section>
                        </div>
                        <div
                          class="leaflet-control-attribution leaflet-control"
                        >
                          <a
                            href="https://leafletjs.com"
                            title="A JS library for interactive maps"
                          >
                            Leaflet
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-148"
                >
                  <button
                    aria-label="view full screen map"
                    class="MuiButtonBase-root MuiIconButton-root makeStyles-fullScreenBtn-123"
                    tabindex="0"
                    title="View full screen map"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        role="presentation"
                        style="width: 1.5rem; height: 1.5rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M5,5H10V7H7V10H5V5M14,5H19V10H17V7H14V5M17,14H19V19H14V17H17V14M10,17V19H5V14H7V17H10Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-152"
              >
                <div
                  class="MuiTableContainer-root MuiBox-root MuiBox-root-153"
                >
                  <table
                    aria-label="treatments-list-table"
                    class="MuiTable-root makeStyles-treatmentsTable-149 MuiTable-stickyHeader"
                  >
                    <thead
                      class="MuiTableHead-root"
                    >
                      <tr
                        class="MuiTableRow-root MuiTableRow-head"
                      >
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                          scope="col"
                          width="50"
                        >
                          ID
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                          scope="col"
                        >
                          Type
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                          scope="col"
                          width="80"
                        >
                          Year
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                          scope="col"
                        >
                          Treatments
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                          scope="col"
                          width="105"
                        >
                          Width (m)
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                          scope="col"
                          width="110"
                        >
                          Length (m)
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                          scope="col"
                          width="100"
                        >
                          Area (m
                          <sup>
                            2
                          </sup>
                          )
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                          scope="col"
                          width="105"
                        >
                          Actions
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="MuiTableBody-root"
                      data-testid="project-table"
                    >
                      <tr
                        class="MuiTableRow-root"
                      >
                        <td
                          class="MuiTableCell-root MuiTableCell-body"
                          colspan="8"
                        >
                          <div
                            class="MuiBox-root MuiBox-root-154"
                          >
                            No Treatments
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
          >
            <div
              class="MuiBox-root MuiBox-root-155"
            >
              <div
                class="MuiBox-root MuiBox-root-156"
              >
                <h2
                  class="MuiTypography-root MuiTypography-h2"
                >
                  Documents
                </h2>
              </div>
              <div
                class="MuiBox-root MuiBox-root-157"
              >
                <div
                  class="MuiTableContainer-root"
                >
                  <table
                    aria-label="attachments-list-table"
                    class="MuiTable-root makeStyles-attachmentsTable-158"
                  >
                    <thead
                      class="MuiTableHead-root"
                    >
                      <tr
                        class="MuiTableRow-root MuiTableRow-head"
                      >
                        <th
                          class="MuiTableCell-root MuiTableCell-head"
                          scope="col"
                        >
                          Name
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head"
                          scope="col"
                        >
                          File Size
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="MuiTableBody-root"
                    >
                      <tr
                        class="MuiTableRow-root"
                      >
                        <td
                          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
                          colspan="4"
                        >
                          No Attachments
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
          >
            <div
              class="MuiBox-root MuiBox-root-160 makeStyles-projectMetadata-159"
            >
              <div
                class="MuiBox-root MuiBox-root-161"
              >
                <h2
                  class="MuiTypography-root MuiTypography-h2"
                >
                  Project Details
                </h2>
              </div>
              <section
                class="MuiBox-root MuiBox-root-162"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="GeneralInfoTitle"
                >
                  General Information
                </h3>
                <dl
                  class="MuiBox-root MuiBox-root-163"
                  data-testid="general_info_component"
                >
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Region:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                      data-testid="project-region"
                    />
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Caribou Range:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                      data-testid="project-region"
                    >
                      test 1
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Start Date:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Oct 10, 1998
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      End Date:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      ---
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Focal Species:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    />
                  </div>
                </dl>
              </section>
              <section
                class="MuiBox-root MuiBox-root-164"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="ContactsTitle"
                >
                  Project Contacts
                </h3>
                <ul
                  class="makeStyles-projectContactList-165"
                >
                  <li
                    class="MuiBox-root MuiBox-root-168"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-169"
                    >
                      <svg
                        class="makeStyles-contactIcon-166"
                        role="presentation"
                        style="width: 1.5rem; height: 1.5rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M7.07,18.28C7.5,17.38 10.12,16.5 12,16.5C13.88,16.5 16.5,17.38 16.93,18.28C15.57,19.36 13.86,20 12,20C10.14,20 8.43,19.36 7.07,18.28M18.36,16.83C16.93,15.09 13.46,14.5 12,14.5C10.54,14.5 7.07,15.09 5.64,16.83C4.62,15.5 4,13.82 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,13.82 19.38,15.5 18.36,16.83M12,6C10.06,6 8.5,7.56 8.5,9.5C8.5,11.44 10.06,13 12,13C13.94,13 15.5,11.44 15.5,9.5C15.5,7.56 13.94,6 12,6M12,11A1.5,1.5 0 0,1 10.5,9.5A1.5,1.5 0 0,1 12,8A1.5,1.5 0 0,1 13.5,9.5A1.5,1.5 0 0,1 12,11Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                      <div
                        class="MuiBox-root MuiBox-root-170"
                      >
                        <div
                          class="contactName"
                        >
                          <strong
                            data-testid="contact_name"
                          >
                            Amanda Christensen
                          </strong>
                        </div>
                        <div
                          class="contactEmail"
                        >
                          <a
                            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                            href="mailto:amanda@christensen.com"
                          >
                            amanda@christensen.com
                          </a>
                        </div>
                        <div>
                          Amanda and associates
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root-171"
                    >
                      <div
                        class="MuiChip-root MuiChip-sizeSmall"
                      >
                        <span
                          class="MuiChip-label MuiChip-labelSmall"
                        >
                          PRIMARY
                        </span>
                      </div>
                    </div>
                  </li>
                </ul>
              </section>
              <section
                class="MuiBox-root MuiBox-root-172"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="IUCNTitle"
                >
                  IUCN Conservation Actions Classifications
                </h3>
                <ul
                  class="makeStyles-projectIucnList-173"
                >
                  <li
                    data-testid="iucn_data"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      IUCN class &gt; IUCN subclass 1 &gt; IUCN subclass 2
                    </p>
                  </li>
                </ul>
              </section>
              <section
                class="MuiBox-root MuiBox-root-174"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="PermitsTitle"
                >
                  Permits
                </h3>
                <ul
                  class="makeStyles-projectPermitList-175"
                >
                  <li
                    data-testid="permit_item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      123 - 
                      <span>
                        Permit type
                      </span>
                    </span>
                  </li>
                </ul>
              </section>
              <section
                class="MuiBox-root MuiBox-root-176"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="FundingSourceTitle"
                >
                  Funding Sources
                </h3>
                <ul
                  class="makeStyles-projectFundingList-177"
                >
                  <li
                    data-testid="funding_data"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-178"
                    >
                      <strong>
                        agency name
                      </strong>
                    </div>
                    <dl
                      class="MuiBox-root MuiBox-root-179"
                    >
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Amount:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          $333
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Project ID:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          ABC123
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Start Date:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 14, 2000
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          End Date:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 13, 2021
                        </dd>
                      </div>
                    </dl>
                  </li>
                </ul>
              </section>
              <section
                class="MuiBox-root MuiBox-root-180"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="PartnershipTitle"
                >
                  Partnerships
                </h3>
                <dl
                  class="MuiBox-root MuiBox-root-182"
                >
                  <div>
                    <dt
                      aria-label="Indigenous Partnerships"
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="indigenousData"
                    >
                      Indigenous:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-181"
                        data-testid="indigenous_partners_data"
                      >
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-181"
                        data-testid="indigenous_partners_data"
                      >
                        First nations code
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                  <div>
                    <dt
                      aria-label="Other Partnerships"
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="stakeholderData"
                    >
                      Other:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-181"
                        data-testid="stakeholder_partners_data"
                      >
                        partner2
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-181"
                        data-testid="stakeholder_partners_data"
                      >
                        partner3
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                </dl>
              </section>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PublicProjectPage renders public project page when project is loaded (project is active) 1`] = `
<DocumentFragment>
  <div
    class="MuiContainer-root MuiContainer-maxWidthXl"
    data-testid="view_project_page_component"
  >
    <div
      class="MuiBox-root MuiBox-root-4"
    >
      <div
        class="MuiBox-root MuiBox-root-5"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1"
        >
          Test Project Name
        </h1>
        <div
          class="MuiBox-root MuiBox-root-6"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Project Status:
          </span>
          <div
            class="MuiBox-root MuiBox-root-7"
          >
            <div
              class="MuiChip-root makeStyles-chip-8 makeStyles-chipActive-9 MuiChip-sizeSmall"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall"
              >
                Active
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-14"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-8"
        >
          <div
            class="MuiBox-root MuiBox-root-15"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                class="MuiBox-root MuiBox-root-16"
              >
                <div
                  class="MuiBox-root MuiBox-root-17"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h2"
                  >
                    Project Objectives
                  </h2>
                </div>
                <p
                  class="MuiTypography-root MuiTypography-body1"
                >
                  Project objectives
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-18"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                class="MuiBox-root MuiBox-root-19"
              >
                <div
                  class="MuiBox-root MuiBox-root-21"
                >
                  <div
                    class="MuiToolbar-root MuiToolbar-regular"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-22"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h2"
                      >
                        Restoration Treatments
                      </h2>
                      <div
                        class="MuiBox-root MuiBox-root-23"
                      >
                        <button
                          aria-label="Filter Treatments"
                          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
                          data-testid="open-layer-menu"
                          id="open-layer-menu"
                          tabindex="0"
                          title="Filter Treaatments"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            Filter Treatments (0)
                            <span
                              class="MuiButton-endIcon MuiButton-iconSizeMedium"
                            >
                              <svg
                                role="presentation"
                                style="width: 1.5rem; height: 1.5rem;"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M7,10L12,15L17,10H7Z"
                                  style="fill: currentColor;"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-24"
              >
                <div
                  class="MuiBox-root MuiBox-root-26 makeStyles-mapContainer-25"
                  data-testid="map_container"
                >
                  <div
                    class="makeStyles-map-27 leaflet-container leaflet-grab leaflet-touch-drag"
                    id="project_location_form_map"
                    style="position: relative;"
                    tabindex="0"
                  >
                    <div
                      class="leaflet-pane leaflet-map-pane"
                      style="left: 0px; top: 0px;"
                    >
                      <div
                        class="leaflet-pane leaflet-tile-pane"
                      >
                        <div
                          class="leaflet-layer "
                          style="z-index: 1;"
                        >
                          <div
                            class="leaflet-tile-container leaflet-zoom-animated"
                            style="z-index: 18; left: 0px; top: 0px;"
                          >
                            <img
                              alt=""
                              class="leaflet-tile"
                              role="presentation"
                              src="https://maps.gov.bc.ca/arcgis/rest/services/province/roads_wm/MapServer/tile/5/10/4"
                              style="width: 256px; height: 256px; left: -159px; top: -31px;"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="leaflet-pane leaflet-shadow-pane"
                      />
                      <div
                        class="leaflet-pane leaflet-overlay-pane"
                      />
                      <div
                        class="leaflet-pane leaflet-marker-pane"
                      />
                      <div
                        class="leaflet-pane leaflet-tooltip-pane"
                      />
                      <div
                        class="leaflet-pane leaflet-popup-pane"
                      />
                    </div>
                    <div
                      class="leaflet-control-container"
                    >
                      <div
                        class="leaflet-top leaflet-left"
                      >
                        <div
                          class="leaflet-control-zoom leaflet-bar leaflet-control"
                        >
                          <a
                            aria-label="Zoom in"
                            class="leaflet-control-zoom-in"
                            href="#"
                            role="button"
                            title="Zoom in"
                          >
                            +
                          </a>
                          <a
                            aria-label="Zoom out"
                            class="leaflet-control-zoom-out"
                            href="#"
                            role="button"
                            title="Zoom out"
                          >
                            −
                          </a>
                        </div>
                      </div>
                      <div
                        class="leaflet-top leaflet-right"
                      />
                      <div
                        class="leaflet-bottom leaflet-left"
                      />
                      <div
                        class="leaflet-bottom leaflet-right"
                      >
                        <div
                          aria-haspopup="true"
                          class="leaflet-control-layers leaflet-control"
                        >
                          <a
                            class="leaflet-control-layers-toggle"
                            href="#"
                            title="Layers"
                          />
                          <section
                            class="leaflet-control-layers-list"
                          >
                            <div
                              class="leaflet-control-layers-base"
                            >
                              <label>
                                <div>
                                  <input
                                    checked="checked"
                                    class="leaflet-control-layers-selector"
                                    name="leaflet-base-layers_33"
                                    type="radio"
                                  />
                                  <span>
                                     BC Government
                                  </span>
                                </div>
                              </label>
                              <label>
                                <div>
                                  <input
                                    class="leaflet-control-layers-selector"
                                    name="leaflet-base-layers_33"
                                    type="radio"
                                  />
                                  <span>
                                     Esri Imagery
                                  </span>
                                </div>
                              </label>
                            </div>
                            <div
                              class="leaflet-control-layers-separator"
                              style="display: none;"
                            />
                            <div
                              class="leaflet-control-layers-overlays"
                            />
                          </section>
                        </div>
                        <div
                          class="leaflet-control-attribution leaflet-control"
                        >
                          <a
                            href="https://leafletjs.com"
                            title="A JS library for interactive maps"
                          >
                            Leaflet
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-28"
                >
                  <button
                    aria-label="view full screen map"
                    class="MuiButtonBase-root MuiIconButton-root makeStyles-fullScreenBtn-3"
                    tabindex="0"
                    title="View full screen map"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        role="presentation"
                        style="width: 1.5rem; height: 1.5rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M5,5H10V7H7V10H5V5M14,5H19V10H17V7H14V5M17,14H19V19H14V17H17V14M10,17V19H5V14H7V17H10Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-32"
              >
                <div
                  class="MuiTableContainer-root MuiBox-root MuiBox-root-33"
                >
                  <table
                    aria-label="treatments-list-table"
                    class="MuiTable-root makeStyles-treatmentsTable-29 MuiTable-stickyHeader"
                  >
                    <thead
                      class="MuiTableHead-root"
                    >
                      <tr
                        class="MuiTableRow-root MuiTableRow-head"
                      >
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                          scope="col"
                          width="50"
                        >
                          ID
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                          scope="col"
                        >
                          Type
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                          scope="col"
                          width="80"
                        >
                          Year
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                          scope="col"
                        >
                          Treatments
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                          scope="col"
                          width="105"
                        >
                          Width (m)
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                          scope="col"
                          width="110"
                        >
                          Length (m)
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                          scope="col"
                          width="100"
                        >
                          Area (m
                          <sup>
                            2
                          </sup>
                          )
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                          scope="col"
                          width="105"
                        >
                          Actions
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="MuiTableBody-root"
                      data-testid="project-table"
                    >
                      <tr
                        class="MuiTableRow-root"
                      >
                        <td
                          class="MuiTableCell-root MuiTableCell-body"
                          colspan="8"
                        >
                          <div
                            class="MuiBox-root MuiBox-root-34"
                          >
                            No Treatments
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
          >
            <div
              class="MuiBox-root MuiBox-root-35"
            >
              <div
                class="MuiBox-root MuiBox-root-36"
              >
                <h2
                  class="MuiTypography-root MuiTypography-h2"
                >
                  Documents
                </h2>
              </div>
              <div
                class="MuiBox-root MuiBox-root-37"
              >
                <div
                  class="MuiTableContainer-root"
                >
                  <table
                    aria-label="attachments-list-table"
                    class="MuiTable-root makeStyles-attachmentsTable-38"
                  >
                    <thead
                      class="MuiTableHead-root"
                    >
                      <tr
                        class="MuiTableRow-root MuiTableRow-head"
                      >
                        <th
                          class="MuiTableCell-root MuiTableCell-head"
                          scope="col"
                        >
                          Name
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head"
                          scope="col"
                        >
                          File Size
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="MuiTableBody-root"
                    >
                      <tr
                        class="MuiTableRow-root"
                      >
                        <td
                          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
                          colspan="4"
                        >
                          No Attachments
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
          >
            <div
              class="MuiBox-root MuiBox-root-40 makeStyles-projectMetadata-39"
            >
              <div
                class="MuiBox-root MuiBox-root-41"
              >
                <h2
                  class="MuiTypography-root MuiTypography-h2"
                >
                  Project Details
                </h2>
              </div>
              <section
                class="MuiBox-root MuiBox-root-42"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="GeneralInfoTitle"
                >
                  General Information
                </h3>
                <dl
                  class="MuiBox-root MuiBox-root-43"
                  data-testid="general_info_component"
                >
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Region:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                      data-testid="project-region"
                    />
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Caribou Range:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                      data-testid="project-region"
                    >
                      test 1
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Start Date:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Oct 10, 1998
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      End Date:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Feb 26, 2100
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Focal Species:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    />
                  </div>
                </dl>
              </section>
              <section
                class="MuiBox-root MuiBox-root-44"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="ContactsTitle"
                >
                  Project Contacts
                </h3>
                <ul
                  class="makeStyles-projectContactList-45"
                >
                  <li
                    class="MuiBox-root MuiBox-root-48"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-49"
                    >
                      <svg
                        class="makeStyles-contactIcon-46"
                        role="presentation"
                        style="width: 1.5rem; height: 1.5rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M7.07,18.28C7.5,17.38 10.12,16.5 12,16.5C13.88,16.5 16.5,17.38 16.93,18.28C15.57,19.36 13.86,20 12,20C10.14,20 8.43,19.36 7.07,18.28M18.36,16.83C16.93,15.09 13.46,14.5 12,14.5C10.54,14.5 7.07,15.09 5.64,16.83C4.62,15.5 4,13.82 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,13.82 19.38,15.5 18.36,16.83M12,6C10.06,6 8.5,7.56 8.5,9.5C8.5,11.44 10.06,13 12,13C13.94,13 15.5,11.44 15.5,9.5C15.5,7.56 13.94,6 12,6M12,11A1.5,1.5 0 0,1 10.5,9.5A1.5,1.5 0 0,1 12,8A1.5,1.5 0 0,1 13.5,9.5A1.5,1.5 0 0,1 12,11Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                      <div
                        class="MuiBox-root MuiBox-root-50"
                      >
                        <div
                          class="contactName"
                        >
                          <strong
                            data-testid="contact_name"
                          >
                            Amanda Christensen
                          </strong>
                        </div>
                        <div
                          class="contactEmail"
                        >
                          <a
                            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                            href="mailto:amanda@christensen.com"
                          >
                            amanda@christensen.com
                          </a>
                        </div>
                        <div>
                          Amanda and associates
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root-51"
                    >
                      <div
                        class="MuiChip-root MuiChip-sizeSmall"
                      >
                        <span
                          class="MuiChip-label MuiChip-labelSmall"
                        >
                          PRIMARY
                        </span>
                      </div>
                    </div>
                  </li>
                </ul>
              </section>
              <section
                class="MuiBox-root MuiBox-root-52"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="IUCNTitle"
                >
                  IUCN Conservation Actions Classifications
                </h3>
                <ul
                  class="makeStyles-projectIucnList-53"
                >
                  <li
                    data-testid="iucn_data"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      IUCN class &gt; IUCN subclass 1 &gt; IUCN subclass 2
                    </p>
                  </li>
                </ul>
              </section>
              <section
                class="MuiBox-root MuiBox-root-54"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="PermitsTitle"
                >
                  Permits
                </h3>
                <ul
                  class="makeStyles-projectPermitList-55"
                >
                  <li
                    data-testid="permit_item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      123 - 
                      <span>
                        Permit type
                      </span>
                    </span>
                  </li>
                </ul>
              </section>
              <section
                class="MuiBox-root MuiBox-root-56"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="FundingSourceTitle"
                >
                  Funding Sources
                </h3>
                <ul
                  class="makeStyles-projectFundingList-57"
                >
                  <li
                    data-testid="funding_data"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-58"
                    >
                      <strong>
                        agency name
                      </strong>
                    </div>
                    <dl
                      class="MuiBox-root MuiBox-root-59"
                    >
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Amount:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          $333
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Project ID:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          ABC123
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Start Date:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 14, 2000
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          End Date:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 13, 2021
                        </dd>
                      </div>
                    </dl>
                  </li>
                </ul>
              </section>
              <section
                class="MuiBox-root MuiBox-root-60"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="PartnershipTitle"
                >
                  Partnerships
                </h3>
                <dl
                  class="MuiBox-root MuiBox-root-62"
                >
                  <div>
                    <dt
                      aria-label="Indigenous Partnerships"
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="indigenousData"
                    >
                      Indigenous:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-61"
                        data-testid="indigenous_partners_data"
                      >
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-61"
                        data-testid="indigenous_partners_data"
                      >
                        First nations code
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                  <div>
                    <dt
                      aria-label="Other Partnerships"
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="stakeholderData"
                    >
                      Other:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-61"
                        data-testid="stakeholder_partners_data"
                      >
                        partner2
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-61"
                        data-testid="stakeholder_partners_data"
                      >
                        partner3
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                </dl>
              </section>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PublicProjectPage renders public project page when project is loaded (project is completed) 1`] = `
<DocumentFragment>
  <div
    class="MuiContainer-root MuiContainer-maxWidthXl"
    data-testid="view_project_page_component"
  >
    <div
      class="MuiBox-root MuiBox-root-64"
    >
      <div
        class="MuiBox-root MuiBox-root-65"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1"
        >
          Test Project Name
        </h1>
        <div
          class="MuiBox-root MuiBox-root-66"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Project Status:
          </span>
          <div
            class="MuiBox-root MuiBox-root-67"
          >
            <div
              class="MuiChip-root makeStyles-chip-68 makeStyles-chipPublishedCompleted-70 MuiChip-sizeSmall"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall"
              >
                Completed
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-74"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-8"
        >
          <div
            class="MuiBox-root MuiBox-root-75"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                class="MuiBox-root MuiBox-root-76"
              >
                <div
                  class="MuiBox-root MuiBox-root-77"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h2"
                  >
                    Project Objectives
                  </h2>
                </div>
                <p
                  class="MuiTypography-root MuiTypography-body1"
                >
                  Project objectives
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-78"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                class="MuiBox-root MuiBox-root-79"
              >
                <div
                  class="MuiBox-root MuiBox-root-81"
                >
                  <div
                    class="MuiToolbar-root MuiToolbar-regular"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-82"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h2"
                      >
                        Restoration Treatments
                      </h2>
                      <div
                        class="MuiBox-root MuiBox-root-83"
                      >
                        <button
                          aria-label="Filter Treatments"
                          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
                          data-testid="open-layer-menu"
                          id="open-layer-menu"
                          tabindex="0"
                          title="Filter Treaatments"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            Filter Treatments (0)
                            <span
                              class="MuiButton-endIcon MuiButton-iconSizeMedium"
                            >
                              <svg
                                role="presentation"
                                style="width: 1.5rem; height: 1.5rem;"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M7,10L12,15L17,10H7Z"
                                  style="fill: currentColor;"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-84"
              >
                <div
                  class="MuiBox-root MuiBox-root-86 makeStyles-mapContainer-85"
                  data-testid="map_container"
                >
                  <div
                    class="makeStyles-map-87 leaflet-container leaflet-grab leaflet-touch-drag"
                    id="project_location_form_map"
                    style="position: relative;"
                    tabindex="0"
                  >
                    <div
                      class="leaflet-pane leaflet-map-pane"
                      style="left: 0px; top: 0px;"
                    >
                      <div
                        class="leaflet-pane leaflet-tile-pane"
                      >
                        <div
                          class="leaflet-layer "
                          style="z-index: 1;"
                        >
                          <div
                            class="leaflet-tile-container leaflet-zoom-animated"
                            style="z-index: 18; left: 0px; top: 0px;"
                          >
                            <img
                              alt=""
                              class="leaflet-tile"
                              role="presentation"
                              src="https://maps.gov.bc.ca/arcgis/rest/services/province/roads_wm/MapServer/tile/5/10/4"
                              style="width: 256px; height: 256px; left: -159px; top: -31px;"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="leaflet-pane leaflet-shadow-pane"
                      />
                      <div
                        class="leaflet-pane leaflet-overlay-pane"
                      />
                      <div
                        class="leaflet-pane leaflet-marker-pane"
                      />
                      <div
                        class="leaflet-pane leaflet-tooltip-pane"
                      />
                      <div
                        class="leaflet-pane leaflet-popup-pane"
                      />
                    </div>
                    <div
                      class="leaflet-control-container"
                    >
                      <div
                        class="leaflet-top leaflet-left"
                      >
                        <div
                          class="leaflet-control-zoom leaflet-bar leaflet-control"
                        >
                          <a
                            aria-label="Zoom in"
                            class="leaflet-control-zoom-in"
                            href="#"
                            role="button"
                            title="Zoom in"
                          >
                            +
                          </a>
                          <a
                            aria-label="Zoom out"
                            class="leaflet-control-zoom-out"
                            href="#"
                            role="button"
                            title="Zoom out"
                          >
                            −
                          </a>
                        </div>
                      </div>
                      <div
                        class="leaflet-top leaflet-right"
                      />
                      <div
                        class="leaflet-bottom leaflet-left"
                      />
                      <div
                        class="leaflet-bottom leaflet-right"
                      >
                        <div
                          aria-haspopup="true"
                          class="leaflet-control-layers leaflet-control"
                        >
                          <a
                            class="leaflet-control-layers-toggle"
                            href="#"
                            title="Layers"
                          />
                          <section
                            class="leaflet-control-layers-list"
                          >
                            <div
                              class="leaflet-control-layers-base"
                            >
                              <label>
                                <div>
                                  <input
                                    checked="checked"
                                    class="leaflet-control-layers-selector"
                                    name="leaflet-base-layers_49"
                                    type="radio"
                                  />
                                  <span>
                                     BC Government
                                  </span>
                                </div>
                              </label>
                              <label>
                                <div>
                                  <input
                                    class="leaflet-control-layers-selector"
                                    name="leaflet-base-layers_49"
                                    type="radio"
                                  />
                                  <span>
                                     Esri Imagery
                                  </span>
                                </div>
                              </label>
                            </div>
                            <div
                              class="leaflet-control-layers-separator"
                              style="display: none;"
                            />
                            <div
                              class="leaflet-control-layers-overlays"
                            />
                          </section>
                        </div>
                        <div
                          class="leaflet-control-attribution leaflet-control"
                        >
                          <a
                            href="https://leafletjs.com"
                            title="A JS library for interactive maps"
                          >
                            Leaflet
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-88"
                >
                  <button
                    aria-label="view full screen map"
                    class="MuiButtonBase-root MuiIconButton-root makeStyles-fullScreenBtn-63"
                    tabindex="0"
                    title="View full screen map"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        role="presentation"
                        style="width: 1.5rem; height: 1.5rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M5,5H10V7H7V10H5V5M14,5H19V10H17V7H14V5M17,14H19V19H14V17H17V14M10,17V19H5V14H7V17H10Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-92"
              >
                <div
                  class="MuiTableContainer-root MuiBox-root MuiBox-root-93"
                >
                  <table
                    aria-label="treatments-list-table"
                    class="MuiTable-root makeStyles-treatmentsTable-89 MuiTable-stickyHeader"
                  >
                    <thead
                      class="MuiTableHead-root"
                    >
                      <tr
                        class="MuiTableRow-root MuiTableRow-head"
                      >
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                          scope="col"
                          width="50"
                        >
                          ID
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                          scope="col"
                        >
                          Type
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                          scope="col"
                          width="80"
                        >
                          Year
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                          scope="col"
                        >
                          Treatments
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                          scope="col"
                          width="105"
                        >
                          Width (m)
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                          scope="col"
                          width="110"
                        >
                          Length (m)
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                          scope="col"
                          width="100"
                        >
                          Area (m
                          <sup>
                            2
                          </sup>
                          )
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                          scope="col"
                          width="105"
                        >
                          Actions
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="MuiTableBody-root"
                      data-testid="project-table"
                    >
                      <tr
                        class="MuiTableRow-root"
                      >
                        <td
                          class="MuiTableCell-root MuiTableCell-body"
                          colspan="8"
                        >
                          <div
                            class="MuiBox-root MuiBox-root-94"
                          >
                            No Treatments
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
          >
            <div
              class="MuiBox-root MuiBox-root-95"
            >
              <div
                class="MuiBox-root MuiBox-root-96"
              >
                <h2
                  class="MuiTypography-root MuiTypography-h2"
                >
                  Documents
                </h2>
              </div>
              <div
                class="MuiBox-root MuiBox-root-97"
              >
                <div
                  class="MuiTableContainer-root"
                >
                  <table
                    aria-label="attachments-list-table"
                    class="MuiTable-root makeStyles-attachmentsTable-98"
                  >
                    <thead
                      class="MuiTableHead-root"
                    >
                      <tr
                        class="MuiTableRow-root MuiTableRow-head"
                      >
                        <th
                          class="MuiTableCell-root MuiTableCell-head"
                          scope="col"
                        >
                          Name
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head"
                          scope="col"
                        >
                          File Size
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="MuiTableBody-root"
                    >
                      <tr
                        class="MuiTableRow-root"
                      >
                        <td
                          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
                          colspan="4"
                        >
                          No Attachments
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
          >
            <div
              class="MuiBox-root MuiBox-root-100 makeStyles-projectMetadata-99"
            >
              <div
                class="MuiBox-root MuiBox-root-101"
              >
                <h2
                  class="MuiTypography-root MuiTypography-h2"
                >
                  Project Details
                </h2>
              </div>
              <section
                class="MuiBox-root MuiBox-root-102"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="GeneralInfoTitle"
                >
                  General Information
                </h3>
                <dl
                  class="MuiBox-root MuiBox-root-103"
                  data-testid="general_info_component"
                >
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Region:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                      data-testid="project-region"
                    />
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Caribou Range:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                      data-testid="project-region"
                    >
                      test 1
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Start Date:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Oct 10, 1998
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      End Date:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Feb 26, 2021
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Focal Species:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    />
                  </div>
                </dl>
              </section>
              <section
                class="MuiBox-root MuiBox-root-104"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="ContactsTitle"
                >
                  Project Contacts
                </h3>
                <ul
                  class="makeStyles-projectContactList-105"
                >
                  <li
                    class="MuiBox-root MuiBox-root-108"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-109"
                    >
                      <svg
                        class="makeStyles-contactIcon-106"
                        role="presentation"
                        style="width: 1.5rem; height: 1.5rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M7.07,18.28C7.5,17.38 10.12,16.5 12,16.5C13.88,16.5 16.5,17.38 16.93,18.28C15.57,19.36 13.86,20 12,20C10.14,20 8.43,19.36 7.07,18.28M18.36,16.83C16.93,15.09 13.46,14.5 12,14.5C10.54,14.5 7.07,15.09 5.64,16.83C4.62,15.5 4,13.82 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,13.82 19.38,15.5 18.36,16.83M12,6C10.06,6 8.5,7.56 8.5,9.5C8.5,11.44 10.06,13 12,13C13.94,13 15.5,11.44 15.5,9.5C15.5,7.56 13.94,6 12,6M12,11A1.5,1.5 0 0,1 10.5,9.5A1.5,1.5 0 0,1 12,8A1.5,1.5 0 0,1 13.5,9.5A1.5,1.5 0 0,1 12,11Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                      <div
                        class="MuiBox-root MuiBox-root-110"
                      >
                        <div
                          class="contactName"
                        >
                          <strong
                            data-testid="contact_name"
                          >
                            Amanda Christensen
                          </strong>
                        </div>
                        <div
                          class="contactEmail"
                        >
                          <a
                            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                            href="mailto:amanda@christensen.com"
                          >
                            amanda@christensen.com
                          </a>
                        </div>
                        <div>
                          Amanda and associates
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root-111"
                    >
                      <div
                        class="MuiChip-root MuiChip-sizeSmall"
                      >
                        <span
                          class="MuiChip-label MuiChip-labelSmall"
                        >
                          PRIMARY
                        </span>
                      </div>
                    </div>
                  </li>
                </ul>
              </section>
              <section
                class="MuiBox-root MuiBox-root-112"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="IUCNTitle"
                >
                  IUCN Conservation Actions Classifications
                </h3>
                <ul
                  class="makeStyles-projectIucnList-113"
                >
                  <li
                    data-testid="iucn_data"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      IUCN class &gt; IUCN subclass 1 &gt; IUCN subclass 2
                    </p>
                  </li>
                </ul>
              </section>
              <section
                class="MuiBox-root MuiBox-root-114"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="PermitsTitle"
                >
                  Permits
                </h3>
                <ul
                  class="makeStyles-projectPermitList-115"
                >
                  <li
                    data-testid="permit_item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      123 - 
                      <span>
                        Permit type
                      </span>
                    </span>
                  </li>
                </ul>
              </section>
              <section
                class="MuiBox-root MuiBox-root-116"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="FundingSourceTitle"
                >
                  Funding Sources
                </h3>
                <ul
                  class="makeStyles-projectFundingList-117"
                >
                  <li
                    data-testid="funding_data"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-118"
                    >
                      <strong>
                        agency name
                      </strong>
                    </div>
                    <dl
                      class="MuiBox-root MuiBox-root-119"
                    >
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Amount:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          $333
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Project ID:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          ABC123
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Start Date:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 14, 2000
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          End Date:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 13, 2021
                        </dd>
                      </div>
                    </dl>
                  </li>
                </ul>
              </section>
              <section
                class="MuiBox-root MuiBox-root-120"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="PartnershipTitle"
                >
                  Partnerships
                </h3>
                <dl
                  class="MuiBox-root MuiBox-root-122"
                >
                  <div>
                    <dt
                      aria-label="Indigenous Partnerships"
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="indigenousData"
                    >
                      Indigenous:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-121"
                        data-testid="indigenous_partners_data"
                      >
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-121"
                        data-testid="indigenous_partners_data"
                      >
                        First nations code
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                  <div>
                    <dt
                      aria-label="Other Partnerships"
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="stakeholderData"
                    >
                      Other:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-121"
                        data-testid="stakeholder_partners_data"
                      >
                        partner2
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-121"
                        data-testid="stakeholder_partners_data"
                      >
                        partner3
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                </dl>
              </section>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
